--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,30 @@
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.2'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+
+    }
+}
+
 apply plugin: 'com.android.library'
 
 def DEFAULT_COMPILE_SDK_VERSION             = 30
-def DEFAULT_BUILD_TOOLS_VERSION             = "27.0.3"
+def DEFAULT_BUILD_TOOLS_VERSION             = "30.0.3"
 def DEFAULT_TARGET_SDK_VERSION              = 30
-def DEFAULT_ANDROID_SUPPORT_VERSION         = "27.1.0"
+def DEFAULT_ANDROID_SUPPORT_VERSION         = "30.0.3"
 def DEFAULT_ANDROID_MIN_SDK_VERSION         = 21
 
 android {
@@ -45,7 +66,6 @@ android {
         }
     }
 }
-
 dependencies {
     def androidSupportVersion = rootProject.hasProperty("androidSupportVersion")  ? rootProject.androidSupportVersion : DEFAULT_ANDROID_SUPPORT_VERSION
 
